[tool.poetry]
name = "pinnable"
version = "0.0.1"
description = "Pinnable"
authors = [
    "Planetable Dev Team <dev@planetable.xyz>"
]
[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
tornado = "^6.1"
tornado_sqlalchemy = "^0.7.0"
Jinja2 = "^3.0.1"
pylibmc = "^1.6.1"
loguru = "^0.5.3"
redis = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
dev = "ivalice:dev"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["alembic"]
remove_redundant_aliases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
